--- a/src/app/current-conditions/current-conditions.component.html
+++ b/src/app/current-conditions/current-conditions.component.html
@@ -1,7 +1,7 @@
 <div>
-  <div *ngFor="let location  of getCurrentConditions()" class="well flex" (click)="showForecast(location.zip)">
+  <div *ngFor="let location  of currentConditions" class="well flex" (click)="showForecast(location.zipCode)">
     <div>
-      <h3>{{location.data.name}} ({{location.zip}})</h3>
+      <h3>{{location.data.name}} ({{location.zipCode}})</h3>
       <h4>Current conditions: {{location.data.weather[0].main}}</h4>
       <h4>Temperatures today:</h4>
       <p>
@@ -10,12 +10,12 @@
         - Min {{location.data.main.temp_min | number:'.0-0'}}
       </p>
       <p>
-        <a [routerLink]="['/forecast', location.zip]" >Show 5-day forecast for {{location.data.name}}</a>
+        <a [routerLink]="['/forecast', location.zipCode]" >Show 5-day forecast for {{location.data.name}}</a>
       </p>
     </div>
     <div>
-      <span class="close" (click)="locationService.removeLocation(location.zip)">&times;</span>
-      <img [src]="weatherService.getWeatherIcon(location.data.weather[0].id)">
+      <span class="close" (click)="removeLocation(location.zipCode)">&times;</span>
+      <img [src]="getWeatherIcon(location.data.weather[0].id)">
     </div>
  </div>
 </div>
