--- a/src/app/condition/condition.component.html
+++ b/src/app/condition/condition.component.html
@@ -1,4 +1,4 @@
-  <div class="well flex" (click)="showForecast(zipCode)">
+  <div class="well flex">
     <div>
       <h3>{{currentCondition?.name}} ({{zipCode}})</h3>
       <h4>Current conditions: {{currentCondition?.weather[0]?.main}}</h4>
