Disabling working button

--- a/src/app/zipcode-entry/zipcode-entry.component.scss
+++ b/src/app/zipcode-entry/zipcode-entry.component.scss
@@ -14,8 +14,10 @@
 }
 
 .working {
-    background-color: yellow;
-    color: gray;    
+    background-color: royalblue;
+    color: white;
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
 .done {
