--- a/src/app/status-button/status-button.component.scss
+++ b/src/app/status-button/status-button.component.scss
@@ -9,25 +9,7 @@
     cursor: pointer;
 }
 
-.generic-button {
-    padding: 0;
-    display: block;
-    border: none;
-
-    width: 200px;
-    height: 50px;
-    border-radius: 100%;
-    cursor: pointer;
-}
-
-.done {
-    background-color: green;
-    color: white;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.disabled-button {
+    pointer-events: none;
+    cursor: not-allowed;
 }
