--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-  <app-zipcode-entry> </app-zipcode-entry>
+  <app-location-entry> </app-location-entry>
   <app-current-conditions></app-current-conditions>
 
 </div>
