--- a/src/app/status-button/status-button.component.html
+++ b/src/app/status-button/status-button.component.html
@@ -1,4 +1,4 @@
-<div class="btn status-button" (click)="addLocation()" [ngClass]="{'disabled-button': showWorkingButton() === true}">
+<div class="btn status-button" (click)="onClick()" [ngClass]="{'disabled-button': showWorkingButton() || showDoneButton() }">
     <ng-content *ngIf="showAddButton()" select="[state=default]"></ng-content>
     <ng-content *ngIf="showWorkingButton()" select="[state=working]"></ng-content>
     <ng-content *ngIf="showDoneButton()" select="[state=done]"></ng-content>
