Country entry search box

--- a/src/app/location-entry/location-entry.component.html
+++ b/src/app/location-entry/location-entry.component.html
@@ -1,6 +1,9 @@
-<div class="well">
+<div class="well entry-container">
   <h2>Enter a zipcode:</h2>
   <input type="text" [(ngModel)]="zipCode" placeholder="Zipcode" class="form-control">
+  <br>
+  <h2>Enter a country:</h2>
+  <app-country-entry (selectCountry)="onCountrySelect($event)"></app-country-entry>
   <br>
   <app-status-button [zipCode]="zipCode" (buttonClick)="onClick($event)">
     <div state="default" class="button default">Add Location</div>
