--- a/src/app/condition/condition.component.html
+++ b/src/app/condition/condition.component.html
@@ -9,7 +9,7 @@
         - Min {{currentCondition?.main.temp_min | number:'.0-0'}}
       </p>
       <p>
-        <a [routerLink]="['/forecast', zipCode]" >Show 5-day forecast for {{currentCondition?.name}}</a>
+        <a [routerLink]="['/forecast', zipCode, countryCode]" >Show 5-day forecast for {{currentCondition?.name}}</a>
       </p>
     </div>
     <div>
