--- a/src/app/current-conditions/current-conditions.component.html
+++ b/src/app/current-conditions/current-conditions.component.html
@@ -1,6 +1,6 @@
 <div>
   <div *ngFor="let location  of locations">
-    <app-condition [zipCode]="location.zipCode">
+    <app-condition [zipCode]="location.zipCode" [countryCode]="location.countryCode">
     </app-condition>
  </div>
 </div>
