Country input improvements

--- a/src/app/country-entry/country-entry.component.html
+++ b/src/app/country-entry/country-entry.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown" id="myDropdown">
     <input type="text" placeholder="Search.." id="myInput" [(ngModel)]="searchValue" (click)="onInputClick()" (ngModelChange)="onFilterChange()">
     <div *ngIf="!searchValueEmpty && !dropdownClosed" class="dropdown-content">
-        <div *ngFor="let country of filteredCountries" class="dropdown-item" (click)="onCountrySelected(country)"> {{ country.name }} </div>
+        <div *ngFor="let country of filteredCountries" class="dropdown-item" (click)="onCountrySelected(country)" [innerHTML]="country.displayName"> </div>
     </div>
 </div>
